--- a/node-app/package.json
+++ b/node-app/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start:dev": "nodemon --exec babel-node src/index.js ",
+    "build": "babel --presets es2015 -d lib/ src",
+    "start:prod": "yarn build && node lib/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +16,14 @@
     "onoff": "^4.1.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^6.1.0",
+    "eslint-plugin-react": "^7.14.2",
     "nodemon": "^1.19.1"
   }
 }
