--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "react-scripts": "2.1.8"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.15",
     "apollo-boost": "0.4.3",
     "graphql": "14.0.2",
     "moment": "^2.24.0",
