--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "react-scripts": "2.1.8"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.0.0",
     "@emotion/core": "^10.0.15",
     "apollo-boost": "0.4.3",
     "graphql": "14.0.2",
     "moment": "^2.24.0",
     "react": "16.8.6",
-    "react-apollo": "2.5.8",
+    "react-apollo": "^3.0.0",
     "react-dom": "16.8.6",
     "react-modal": "3.8.2",
     "react-router-dom": "4.4.0-beta.8",
