--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.0.0",
     "@emotion/core": "^10.0.15",
+    "antd": "^3.21.2",
     "apollo-boost": "0.4.3",
     "graphql": "14.0.2",
     "moment": "^2.24.0",
